WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277119
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/table-as-item-min-height-1.html
https://bugs.webkit.org/show_bug.cgi?id=277119
Summary
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/table-as-item-min-...
alan
Reported
2024-07-25 20:33:31 PDT
ssia
Attachments
Patch
(9.55 KB, patch)
2024-07-25 20:39 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(9.69 KB, patch)
2024-07-26 19:28 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-07-25 20:39:36 PDT
Created
attachment 471972
[details]
Patch
alan
Comment 2
2024-07-26 19:28:11 PDT
Created
attachment 471979
[details]
[fast-cq]Patch
EWS
Comment 3
2024-07-26 20:38:15 PDT
Committed
281436@main
(f54fc433d1de): <
https://commits.webkit.org/281436@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471979
[details]
.
Radar WebKit Bug Importer
Comment 4
2024-07-26 20:39:16 PDT
<
rdar://problem/132616032
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug