[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/table-as-item-min-height-1.html https://bugs.webkit.org/show_bug.cgi?id=277119

Reviewed by Antti Koivisto.

1. maybeCacheFlexItemMainIntrinsicSize is part of flex base size computation which means min/max width/height should be ignored (see https://drafts.csswg.org/css-flexbox-1/#algo-main-item
2. only ignore min/max width/height in main axis direction
3. apply this rule to tables when they are flex items

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeReplacedLogicalWidthRespectingMinMaxWidth const):
(WebCore::RenderBox::shouldIgnoreLogicalMinMaxWidthSizes const):
(WebCore::RenderBox::shouldIgnoreLogicalMinMaxHeightSizes const):
(WebCore::RenderBox::shouldIgnoreMinMaxSizes const): Deleted.
* Source/WebCore/rendering/RenderBox.h:
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::computeFlexBaseSizeForFlexItem):
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::paint):
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::layout):

Canonical link: https://commits.webkit.org/281436@main